--- a/logging.conf
+++ b/logging.conf
@@ -12,14 +12,15 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
+level=INFO
 handlers=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout, )
 
 [formatter_simpleFormatter]
-format=[%(asctime)s.%(msecs)03d] %(name)6s | %(levelname)-6s - %(message)s
+format=[%(asctime)s.%(msecs)03d] %(name)12s | %(levelname)-6s - %(message)s
 datefmt=%H:%M:%S
