--- a/logging.conf
+++ b/logging.conf
@@ -12,12 +12,12 @@ keys=consoleHandler
 keys=simpleFormatter
 
 [logger_root]
-level=INFO
+level=TRACE
 handlers=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout, )
 
