--- a/logging.conf
+++ b/logging.conf
@@ -22,5 +22,5 @@ formatter=simpleFormatter
 args=(sys.stdout, )
 
 [formatter_simpleFormatter]
-format=[%(asctime)s.%(msecs)03d] %(name)16s | %(levelname)-6s - %(message)s
+format=[%(asctime)s.%(msecs)03d] %(name)16s | %(levelname)-6s  %(message)s
 datefmt=%H:%M:%S
